# mgba

./: CMakeLists.txt  README.md
src/platform/gekkonet/: CMakeLists.txt  main.c  main.cpp
src/platform/qt/: CMakeLists.txt
